--- a/chat.html
+++ b/chat.html
@@ -5,10 +5,10 @@
   <head>
     
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="chat.css">
+    <link rel="stylesheet" href="css/chat.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="chat.js" defer></script>
+    <script src="js/chat.js" defer></script>
 
   </head>
   
@@ -26,7 +26,7 @@
       
       <div class="userInfo">
         <button id="profileBtn">
-          <img src="img/user.png">
+          <img src="assets/user.png">
         </button>
 
         <button id="userDetails">
@@ -36,7 +36,7 @@
         </button>
 
         <button id="logoutButton">
-          <img src="img/logout.png">
+          <img src="assets/logout.png">
         </button>
       </div>
 
@@ -44,9 +44,9 @@
 
 
     <header>
-      <img src="img/logo.png">
+      <img src="assets/logo.png">
       <button id="switchThemeBtn">
-        <img src="img/lightbulb.png">
+        <img src="assets/lightbulb.png">
       </button>
     </header>
 
