--- a/chat.html
+++ b/chat.html
@@ -44,7 +44,9 @@
 
 
     <header>
-      <img src="assets/logo.png">
+      <div class="logo">
+        
+      </div>
       <button id="switchThemeBtn">
         <img src="assets/lightbulb.png">
       </button>
