Fix: Correcoes do Merge

--- a/chat.html
+++ b/chat.html
@@ -33,11 +33,11 @@
       
      
       <div class="userInfo">
-        <button id="profileBtn" aria-label="Open profile" tabindex="0">
-          <img src="assets/user.png" alt="">
-        </button>
+        <div id="profileBtn" aria-label="Open profile" tabindex="0">
+          <img  id="imgUser" class="imgUser" src="" alt="">
+        </div>
 
-        <button id="userDetails" tabindex="0">
+        <div id="userDetails" tabindex="0">
           <div id="userName">User</div>
           <div id="statusDot" class="online"></div>
           <div id="statusDesc">Online</div>
