--- a/chat.html
+++ b/chat.html
@@ -14,6 +14,7 @@
     <script type="module" src="./js/config.js"></script>
     <script type="module" src="./js/auth.js"></script>
     <script type="module" src="./js/ui.js"></script>
+    <script type="module" src="./js/presence.js"></script>
 
   </head>
   
@@ -84,7 +85,7 @@
     </form>
 
 
-    <button id="addUserButton"> Add User </button>
+    
 
     <dialog id="alertBox" aria-labelledby="logoutTitle">
       <div class="exitContent">
