--- a/chat.html
+++ b/chat.html
@@ -48,12 +48,14 @@
 
 
     <header>
+      <button id="toggleAside" aria-label="Menu lateral">
+        <img src="assets/menu.png" alt="" aria-hidden="true">
+      </button>
       <div class="logo">
         
       </div>
-      <button id="switchThemeBtn" aria-label="Trocar tema claro/escuro" 
-      tabindex="0">
-        <img src="assets/lightbulb.png" alt="">
+      <button id="switchThemeBtn" aria-label="Trocar tema claro/escuro">
+        <img src="assets/lightbulb.png" alt="" aria-hidden="true">
       </button>
     </header>
 
