fix: filtro de mensagens

--- a/chat.html
+++ b/chat.html
@@ -60,13 +60,13 @@
         <img src="assets/logocompletagotabranca.svg" alt="Logo Lumon Chat" style="height: 40px; width: auto; object-fit: contain;">
       </div>
 
-      <div class="category-select">
+   <div class="category-select">
   <input type="checkbox" id="options-view-button" />
 
-  <div class="select-button">
+  <label class="select-button" for="options-view-button">
     <i id="main-icon" class="bi bi-globe"></i>
     <div id="selected-value">Todas as Mensagens</div>
-  </div>
+    <i class="bi bi-chevron-down ms-auto"></i> </label>
 
   <ul id="options">
     <li>
