--- a/chat.html
+++ b/chat.html
@@ -66,7 +66,7 @@
 
 
 
-      <div class="category-select">
+      <div class="category-select" tabindex="0">
         <input type="checkbox" id="options-view-button" />
 
         <label class="select-button" for="options-view-button">
@@ -99,7 +99,7 @@
 
 
           
-      <div class="theme-switch-wrapper">
+      <div class="theme-switch-wrapper" tabindex="0">
         <label class="theme-switch" for="switchThemeBtn">
             <input type="checkbox" id="switchThemeBtn" aria-label="Trocar tema claro/escuro">
             <div class="slider round">
@@ -126,7 +126,9 @@
 
       <h2> Caixa de texto </h2>
 
-      <button type="button" id="togglePrivateBtn" aria-label="Alternar modo Privado/Público" title="Alternar modo Privado/Público" style="background: none; border: none; cursor: pointer; padding: 1px; display: flex; align-items: center; justify-content: center;">
+      <button type="button" id="togglePrivateBtn" aria-label="Alternar modo Privado/Público" 
+      title="Alternar modo Privado/Público" 
+      style="background: none; border: none; cursor: pointer; padding: 1px; display: flex; align-items: center; justify-content: center;">
           <img src="assets/openlock.svg" id="btnLockIcon" style="width: 50px; height: 50px; object-fit: contain;" alt="Cadeado">
       </button>
 
